syntax = "proto3";

package http_filter.v1;

option go_package = "httpfilterv1";

service HTTPFilterStoreService {
  rpc ListHTTPFilter(ListHTTPFiltersRequest) returns (ListHTTPFiltersResponse);
}

message HTTPFilterListItem {
  string uid = 1;
  string name = 2;
}

message ListHTTPFiltersRequest {}

message ListHTTPFiltersResponse {
  repeated HTTPFilterListItem items = 1;
}