syntax = "proto3";

package virtual_service.v1;

option go_package = "virtualservicev1";

import "common/v1/common.proto";
import "virtual_service_template/v1/virtual_service_template.proto";

service VirtualServiceStoreService {
  rpc CreateVirtualService(CreateVirtualServiceRequest) returns (CreateVirtualServiceResponse);
  rpc UpdateVirtualService(UpdateVirtualServiceRequest) returns (UpdateVirtualServiceResponse);
  rpc DeleteVirtualService(DeleteVirtualServiceRequest) returns (DeleteVirtualServiceResponse);
  rpc GetVirtualService(GetVirtualServiceRequest) returns (GetVirtualServiceResponse);
  rpc ListVirtualServices(ListVirtualServicesRequest) returns (ListVirtualServicesResponse);
}

message VirtualHost {
  repeated string domains = 1;
}

message CreateVirtualServiceRequest {
  string name = 1;
  repeated string node_ids = 2;
  string access_group = 3;
  string template_uid = 4;
  string listener_uid = 5;
  VirtualHost virtual_host = 6;
  oneof access_log_config {
    string access_log_config_uid = 7;
  }
  repeated string additional_http_filter_uids = 8;
  repeated string additional_route_uids = 9;
  optional bool use_remote_address = 10;
  repeated virtual_service_template.v1.TemplateOption template_options = 11;
}

message CreateVirtualServiceResponse {}

message UpdateVirtualServiceRequest {
  string uid = 1;
  repeated string node_ids = 2;
  string template_uid = 3;
  string listener_uid = 4;
  VirtualHost virtual_host = 5;
  oneof access_log_config {
    string access_log_config_uid = 6;
  }
  repeated string additional_http_filter_uids = 7;
  repeated string additional_route_uids = 8;
  optional bool use_remote_address = 9;
  repeated virtual_service_template.v1.TemplateOption template_options = 10;
}

message UpdateVirtualServiceResponse {}

message DeleteVirtualServiceRequest {
  string uid = 1;
}

message DeleteVirtualServiceResponse {}

message GetVirtualServiceRequest {
  string uid = 1;
}

message GetVirtualServiceResponse {
  string uid = 1;
  string name = 2;
  repeated string node_ids = 3;
  string access_group = 4;
  common.v1.ResourceRef template = 5;
  common.v1.ResourceRef listener = 6;
  VirtualHost virtual_host = 7;
  oneof access_log {
    common.v1.ResourceRef access_log_config = 8;
    bytes access_log_config_raw = 9;
  }
  repeated common.v1.ResourceRef additional_http_filters = 10;
  repeated common.v1.ResourceRef additional_routes = 11;
  optional bool use_remote_address = 12;
  repeated virtual_service_template.v1.TemplateOption template_options = 13;
  bool is_editable = 14;
}

message ListVirtualServicesRequest {
  string access_group = 1;
}

message VirtualServiceListItem {
  string uid = 1;
  string name = 2;
  repeated string node_ids = 3;
  string access_group = 4;
  common.v1.ResourceRef template = 5;
  bool is_editable = 6;
}

message ListVirtualServicesResponse {
  repeated VirtualServiceListItem items = 1;
}